@startuml

class Produto{
  - id: Long
  - nome: String
  - valor: Integer
  - quantEstoque: Integer
  - descrição: String
  - Estoque: int
}

class Categoria {
  - id: Long
  - String: nome
}

class ItemVenda {
  - id: Long
  - quantidade: Integer
  - valorUnitario: BigDecimal
  - valorTotal: BigDecimal
}

class Venda{
  - id: Long
  - valorTotal: BigDecimal
  - desconto: BigDecimal
}

class Pagamento {
  - id: Long
  - tipo: String
  - valor: BigDecimal
}

class CartaoDeCredito {
  - numeroCartao: String
  - dataValidade: LocalDate
  - codigoSeguranca: String
  - bandeira: String
}

class BoletoBancario {
  - banco: String
  - numeroBoleto: String
  - dataVencimento: LocalDate
}

class Pix {
  - chave: String
}

class Usuario {
  - id: Long
  - nome: String
  - email: String
  - senha: String
  - cpf: String
  - dataNascimento: Date
  - isAdministrador: boolean
}

class Endereco {
  - id: Long
  - logradouro: String
  - numero: String
  - complemento: String
  - bairro: String
  - cep: String
}

class Telefone{
  - id: Long
  - codArea: String
  - numero: String
}

class Estado {
  - id: Long
  - nome: String
  - sigla: String
}

class Cidade{
  - id: Long
  - nome: String
}

class Avaliacao{
   - id: long
   - nota: Integer
   - comentario: String
}


Produto --> Avaliacao

Usuario "1" o-down-> "*" Endereco

Usuario "1" o-> "1" Telefone

Endereco "*" o-> "1" Cidade

Estado "1" -> "*" Cidade

ItemVenda o-> Produto

Produto "*" o-> "1" Categoria

Pagamento <|-- CartaoDeCredito

Pagamento <|-- BoletoBancario

Pagamento <|-- Pix

Venda "*" o-up-> "1" Usuario

Venda"1" -> "*" ItemVenda

Venda"1" o-> "1" Pagamento

@enduml